完成docker镜像制作

--- a/guest/Dockerfile
+++ b/guest/Dockerfile
@@ -1,7 +1,7 @@
 FROM node-nginx
 MAINTAINER axe-org
 
-ENV AXE_VERSION 0.0.1
+ENV AXE_VERSION 0.0.1-guest
 
 WORKDIR /axe
 RUN apk add --no-cache python build-base curl \
