--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user  root;
-worker_processes  2;
+worker_processes  auto;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /axe/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 
@@ -18,7 +18,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /axe/nginx/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
